// This file is a direct copy of: https://github.com/FlapKap/nebulastream-ed-runtime/blob/main/proto/EndDeviceProtocol.proto

syntax = "proto3";
import "nanopb.proto";

package TerraProtocol;


enum ExpressionInstructions {
    CONST = 0;
    VAR = 1;
    AND = 2;
    OR = 3;
    NOT = 4;
    LT = 5;
    GT = 6;
    EQ = 7;
    ADD = 8;
    SUB = 9;
    MUL = 10;
    DIV = 11;
    MOD = 12;
    LOG = 13;
    POW = 14;
    SQRT = 15;
    EXP = 16;
    CEIL = 17;
    FLOOR = 18;
    ROUND = 19;
    ABS = 20;
    LTEQ = 21;
    GTEQ = 22;
}

message Data {
    oneof data{
        ExpressionInstructions instruction = 1;
        uint32 _uint8 = 2;
        uint32 _uint16 = 3;
        uint32 _uint32 = 4;
        //uint64 _uint64 = 5;
        sint32 _int8 = 6;
        sint32 _int16 = 7;
        sint32 _int32 = 8;
        //sint64 _int64 = 9;
        float _float = 10;
        double _double = 11;
    }
}

message Output {
    message QueryResponse {
        int32 id = 1;
        repeated Data response = 2 [(nanopb).max_count = 20];
    }
    repeated QueryResponse responses = 1 [(nanopb).max_count = 2];
}

message Expression {
    repeated Data instructions = 1 [(nanopb).max_count = 25];
}

message MapOperation {
    Expression function = 1;
    int32 attribute = 2;
}

message FilterOperation {
    Expression predicate = 1;
}

enum WindowAggregationType {
    MIN = 0;
    MAX = 1;
    SUM = 2;
    AVG = 3;
    COUNT = 4;
}

enum WindowSizeType {
    TIMEBASED = 0;
    COUNTBASED = 1;
}

message WindowOperation {
    int32 size = 1;
    WindowSizeType sizeType = 2;
    WindowAggregationType aggregationType = 3;
    int32 startAttribute = 4;
    int32 endAttribute = 5;
    int32 resultAttribute = 6;
    int32 readAttribute = 7;
}

message Operation {
    oneof operation {
        MapOperation map = 1;
        FilterOperation filter = 2;
        WindowOperation window = 3;    
    }
}

message Query {
    //bytes resultType = 2; //For some reason minipb breaks if I make this a repeated enum or int32
    repeated Operation operations = 1 [(nanopb).max_count = 3];   
}

message Message {
    repeated Query queries = 1 [(nanopb).max_count = 2];
}